--- a/JSProject/final.css
+++ b/JSProject/final.css
@@ -1,24 +1,39 @@
 html, body {
-    margin: 0;
-  }
-  
-  html {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    height: 100%;
-  }
-  
-  body {
-    overflow: hidden;
-    height: inherit;
-  }
-  
-  h1 {
-    font-size: 4rem;
-    letter-spacing: -1px;
-    position: absolute;
-    margin: 10px;
-    top: -5px;
-    left: 7px;
-    color: white;
-    text-shadow: 0 6px rgb(107, 104, 104);
-  }
+  margin: 0;
+}
+
+html {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  height: 100%;
+}
+
+body {
+  overflow: hidden;
+  height: inherit;
+}
+
+h1 {
+  font-size: 4rem;
+  letter-spacing: -1px;
+  position: absolute;
+  margin: 10px;
+  top: -5px;
+  left: 7px;
+  color: white;
+  text-shadow: 0 6px rgb(107, 104, 104);
+}
+
+button {
+  background-color: #000;
+  color: white;
+  border: 3px solid;
+  border-color: white;
+  padding: 10px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  position: absolute;
+  top: 100px;
+  left: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+}
